# crabenv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  install.sh  justfile
.github/workflows/: release.yml
_checks/: README.md
_checks/sample-projects/: README.md  manifest.json
_checks/sample-projects/basic-flutter/: .env.example  .gitignore  pubspec.yaml
_checks/sample-projects/basic-flutter/lib/: main.dart
_checks/sample-projects/basic-flutter/lib/config/: env.dart
_checks/sample-projects/basic-npm/: .env.example  package.json
_checks/sample-projects/basic-npm/src/: env.private.ts  env.public.ts  index.ts
_checks/sample-projects/basic-python/: .env.example  pyproject.toml
_checks/sample-projects/basic-python/src/basic_python/: env.py  main.py
_checks/sample-projects/basic-rust/: .env.example  Cargo.toml
_checks/sample-projects/basic-rust/src/: config.rs  main.rs
_checks/sample-projects/monorepo/: .env.example  .gitignore  README.md  docker-compose.yml  package.json
_checks/sample-projects/monorepo/.github/workflows/: deploy.yml
_checks/sample-projects/monorepo/apps/cloudflare-worker/: .env.example  package.json  wrangler.toml
_checks/sample-projects/monorepo/apps/cloudflare-worker/src/: env.private.ts  env.public.ts  index.ts
_checks/sample-projects/monorepo/apps/hono-api/: .env.example  Dockerfile  package.json
_checks/sample-projects/monorepo/apps/hono-api/src/: env.private.ts  env.public.ts  index.ts
_checks/sample-projects/monorepo/apps/next-web/: .env.example  package.json  tsconfig.json
_checks/sample-projects/monorepo/apps/next-web/src/: env.private.ts  env.public.ts
_checks/sample-projects/multilanguage/: .gitignore  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml
_checks/sample-projects/multilanguage/apps/cloudflare-worker/: .env.example  package.json  tsconfig.json  wrangler.toml
_checks/sample-projects/multilanguage/apps/cloudflare-worker/src/: env.private.ts  env.public.ts  index.ts
_checks/sample-projects/multilanguage/apps/flutter-mobile/: .env.example  pubspec.yaml
_checks/sample-projects/multilanguage/apps/flutter-mobile/lib/: main.dart
_checks/sample-projects/multilanguage/apps/hono-api/: .env.example  Dockerfile  package.json
_checks/sample-projects/multilanguage/apps/hono-api/src/: env.private.ts  env.public.ts  index.ts
_checks/sample-projects/multilanguage/apps/next-web/: .env.example  package.json
_checks/sample-projects/multilanguage/apps/python-service/: .env.example  Dockerfile  pyproject.toml
_checks/sample-projects/multilanguage/apps/rust-worker/: .env.example  Cargo.toml
_plans/: BETTER_SINKS.md  FIRST_PLAN.md  REFACTORS.md  TODOS.md
docs/: cli-guide.md  gittydocs.jsonc  index.md  skill.md
docs/language/: flutter.md  python.md  rust.md  typescript.md
docs/sinks/: gha-echo.md  gha-env.md  index.md
npm/: README.md  bin.js  install.js  package.json
scripts/: generate-skill.ts  generate-skill.tsx  tag_and_release.sh
skills/crabenv/: SKILL.md
skills/crabenv/references/: flutter-dart.md  github-actions.md  python.md  rust.md  typescript-javascript.md
src/: cli.rs  commands.rs  copy_plan.rs  discovery.rs  graph.rs  issues.rs  main.rs  models.rs  ordering.rs  prompt.rs  render.rs  util.rs
src/adapters/: docker.rs  dotenv.rs  mod.rs  python.rs  rust.rs  typescript.rs  wrangler.rs
src/sinks/: gha_echo.rs  gha_env.rs  mod.rs  tests.rs
(+9 files in other folders)
